<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/dah"
        android:layout_marginBottom="366dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart" />

    <ImageButton
        android:id="@+id/goDatahide"
        android:background="@drawable/nextbtn"
        android:layout_marginEnd="12dp"
        android:layout_height="50dp"
        android:layout_width="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/datahide_new"
        android:scaleType="fitXY"
        android:layout_height="180dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/datahide_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:background="#FF8A80" />

            <TextView
                android:text="@string/datahide_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:background="#A5D6A7" />

            <TextView
                android:text="@string/datahide_protect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:background="#89C4F4" />

            <TextView
                android:text="@string/datahide_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:background="#A5D6A7" />

            <TextView
                android:text="@string/datahide_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:background="#89C4F4" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
